# ai-cs-ticketgen

./: .env.py  .gitignore  DEVLOG.md  MAINTENANCE_MAP.md  README.md  app.py  cmd.txt  gitignore  prompts.py  pyproject.toml  requirements.txt  smoke_test_imports.py  ticketgen.py
controllers/: ticket_controller.py
domain/: normalizer.py  ticket_model.py
logs/: 2026-01-28.md
renderers/: markdown_renderer.py
services/: ticket_service.py
